--- a/DrakoEngineLib/DrakoEngineLib.vcxproj
+++ b/DrakoEngineLib/DrakoEngineLib.vcxproj
@@ -155,7 +155,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="add.hpp" />
     <ClInclude Include="app.hpp" />
     <ClInclude Include="config.hpp" />
     <ClInclude Include="DrakoEngine.hpp" />
@@ -163,12 +162,7 @@
     <ClInclude Include="del_pch.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="add.cpp">
-      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">del_pch.hpp</PrecompiledHeaderFile>
-      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">del_pch.hpp</PrecompiledHeaderFile>
-      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">del_pch.hpp</PrecompiledHeaderFile>
-      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">del_pch.hpp</PrecompiledHeaderFile>
-    </ClCompile>
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="del_pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
