--- a/DrakoEngineLib/DrakoEngineLib.vcxproj.filters
+++ b/DrakoEngineLib/DrakoEngineLib.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="exported.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="add.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="del_pch.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -35,13 +32,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="add.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="del_pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DrakoEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="App.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
